tests/specs/check/dts_importing_non_existent/check.out
Check file:///[WILDLINE]/dts_importing_non_existent/index.js
error: TS2834 [ERROR]: Cannot find module.
export { Test } from "./test";
                     ~~~~~~~~
    at file:///[WILDLINE]/index.d.ts:1:22
